k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: api-app-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "API_DOMAIN"
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: medusa
                port:
                  number: 9000
    - host: "API_DOMAIN"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medusa
                port:
                  number: 9000
    - host: "SHOP_DOMAIN"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storefront
                port:
                  number: 80
    - host: "MINIO_DOMAIN"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
    - host: "ADMIN_DOMAIN"
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: medusa
                port:
                  number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-root-redirect
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: admin-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "ADMIN_DOMAIN"
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: medusa
                port:
                  number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
    - host: "MINIO_CONSOLE_DOMAIN"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: admin-redirect
spec:
  redirectRegex:
    regex: "^http://ADMIN_DOMAIN/?$"
    replacement: "http://ADMIN_DOMAIN/app"
    permanent: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-app-redirect
spec:
  redirectRegex:
    regex: "^http://API_DOMAIN/app"
    replacement: "http://ADMIN_DOMAIN"
    permanent: true
